beginning the payment processing and reporting

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.3.6",
         "fakerphp/faker": "^1.9.1",
         "laravel/ui": "^3.0",
