--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.10",
         "mcamara/laravel-localization": "^1.7",
+        "pusher/pusher-php-server": "^7.0",
         "spatie/laravel-permission": "^5.5",
         "yoeunes/toastr": "^1.2"
     },
