--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.10",
+        "maatwebsite/excel": "^3.1",
         "mcamara/laravel-localization": "^1.7",
         "pusher/pusher-php-server": "^7.0",
         "spatie/laravel-permission": "^5.5",
