fix some bug in migration

--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,17 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:5gUsnyqnTpweyz2XRGe6q/70Ds0U2lAjOaN8Mm3f+QM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://aims-azure.azurewebsites.net/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sis
+DB_DATABASE=sis_t
 DB_USERNAME=root
 DB_PASSWORD=
+
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,10 +27,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=05e1069b479356
-MAIL_PASSWORD=edc886f06219cc
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=kamarhassan044@gmail.com
+MAIL_FROM_ADDRESS=
 MAIL_FROM_NAME="${APP_NAME}"
 
 
