--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 /node_modules
 /public/hot
-/public/storage
 /storage/*.key
 /vendor
 .env
@@ -14,3 +13,6 @@ npm-debug.log
 yarn-error.log
 /.idea
 /.vscode
+
+/public/WebsitePageBuilder
+/public/storage
