--- a/Modules/Cms/composer.json
+++ b/Modules/Cms/composer.json
@@ -1,34 +1,25 @@
 {
-    "name": "nwidart/cms",
-    "description": "",
-    "authors": [
-        {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
-        }
-    ],
-    "extra": {
-        "laravel": {
-            "providers": [],
-            "aliases": {
-
-            }
-        }
-    },
-    "autoload": {
-        "psr-4": {
-            "Modules\\Cms\\": "",
-           "files": [
-            
-
-           ]
-         
-        }
-    },
+   "name": "nwidart/cms",
+   "description": "",
+   "authors": [
+      {
+         "name": "Nicolas Widart",
+         "email": "n.widart@gmail.com"
+      }
+   ],
+   "extra": {
+      "laravel": {
+         "providers": [],
+         "aliases": {}
+      }
+   },
+   "autoload": {
+      "psr-4": {
+         "Modules\\Cms\\": "Modules/Cms/",
+       
+      }
+   },
    "autoload-dev": {
-      
-      "files": [
-    
-      ]
+      "files": []
    }
 }
